icons/colors/white space fixed

--- a/styles/artista.css
+++ b/styles/artista.css
@@ -13,7 +13,30 @@ body {
 .col-lg-7 {
   background: #171717;
   color: white;
-  height: 90vh;
+  height: 100vh;
+}
+
+.col-lg-3 {
+  /* background: black; */
+  color: #8f8f8f;
+  padding-left: 30px;
+}
+
+.col-lg-3 h6,
+.music-list {
+  font-size: 10pt;
+}
+
+/* .music-list p {
+  margin: 0;
+  font-size: 10pt;
+} */
+
+.card-user {
+  display: flex;
+  gap: 10px;
+  margin-top: 40px;
+  color: #8f8f8f;
 }
 
 .following {
@@ -93,6 +116,12 @@ body {
   height: 14px;
 }
 
+.option svg {
+  /* width: 17px;
+  height: 17px; */
+  margin-right: 5px;
+}
+
 svg path {
   fill: rgb(180, 180, 180);
 }
@@ -140,3 +169,9 @@ input[type="range"] {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+/* @media screen and (min-width: 766px) {
+  scroll-y {
+    height: 100vh;
+  }
+} */
